@@ -1,5 +1,11 @@
 2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-window.c:
+	
+	Also recognise keypad keys for navigation. Bug #337089.
+
+2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/Makefile.am:
 	
 	Fix the build.
